KUBE/clusters/mac/lab/internet/cloudflare-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internet
  namespace: cloudflare-gateway
spec:
  gatewayClassName: cloudflare
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
