KUBE/clusters/mac/lab/internet/route-argocd-internet.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-internet-route
  namespace: argocd
spec:
  parentRefs:
    - name: internet
      namespace: cloudflare-gateway
  hostnames:
    - "argocd.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
