KUBE/clusters/mac/lab/internet/route-case-internet.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: case-internet-route
  namespace: endr
spec:
  parentRefs:
    - name: internet
      namespace: cloudflare-gateway
  hostnames:
    - "case.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: case
          port: 80
